VC-2 Builder patterns
+ MoreleService
+ AllWeldService
+ AllWeldService
+ XkomService builder + fix
+ AltoService
+ ApolloService
+ CarinetService
+ CombatService
+ KomputronikService
+ SonyCentreService
+ AmsoService
+ ZadowolenieService
+ VobisService

+ refactoring:
- rename transformers to mapper
- fix bug

+ add htmltag
+ changes after CR v1
  - hashCode annotation
  - price mapper inside builder