@@ -8,14 +8,13 @@ import pl.promotion.finder.feature.product.repository.ProductRepository;
 import pl.promotion.finder.feature.shop.dto.ShopDTO;
 import pl.promotion.finder.feature.shop.repository.Shop;
 import pl.promotion.finder.feature.shop.repository.ShopRepository;
+import pl.promotion.finder.feature.shop.service.ShopMapper;
 import pl.promotion.finder.feature.shop.service.ShopService;
-import pl.promotion.finder.feature.shop.service.ShopTransformer;
 
 import java.sql.Timestamp;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Log4j2
 @Service
@@ -23,51 +22,51 @@ public class ProductService {
 
     private final ProductRepository productRepository;
     private final ShopRepository shopRepository;
-    private final ProductTransformer productTransformer;
-    private final ShopTransformer shopTransformer;
+    private final ProductMapper productMapper;
+    private final ShopMapper shopMapper;
     private final ShopService shopService;
 
-    public ProductService(ProductRepository productRepository, ShopRepository shopRepository, ProductTransformer productTransformer, ShopTransformer shopTransformer, ShopService shopService) {
+    public ProductService(ProductRepository productRepository, ShopRepository shopRepository, ProductMapper productMapper, ShopMapper shopMapper, ShopService shopService) {
         this.productRepository = productRepository;
         this.shopRepository = shopRepository;
-        this.productTransformer = productTransformer;
-        this.shopTransformer = shopTransformer;
+        this.productMapper = productMapper;
+        this.shopMapper = shopMapper;
         this.shopService = shopService;
     }
 
     public List<ProductDTO> getAll() {
-        return productRepository.findAll().stream().map(productTransformer::convertToDto).collect(Collectors.toList());
+        return productRepository.findAll().stream().map(productMapper::convertToDto).toList();
     }
 
     public List<ProductDTO> getByName(String name) {
-        return productRepository.findProductsByProductName(name).stream().map(productTransformer::convertToDto).collect(Collectors.toList());
+        return productRepository.findProductsByProductName(name).stream().map(productMapper::convertToDto).toList();
     }
 
     public ProductDTO getProductByNameWithLowerPrice(String name) {
         Optional<Product> product = Optional.ofNullable(productRepository.findProductByProductNameWithLowerPrice(name));
-        return product.map(productTransformer::convertToDto).orElse(null);
+        return product.map(productMapper::convertToDto).orElse(null);
     }
 
     public List<ProductDTO> findProductsByInterval(String name) {
-        return productRepository.findProductsByProductNameAndCreateDate(name).stream().map(productTransformer::convertToDto).collect(Collectors.toList());
+        return productRepository.findProductsByProductNameAndCreateDate(name).stream().map(productMapper::convertToDto).toList();
     }
 
     public ProductDTO getById(Long id) {
-        return productTransformer.convertToDto(productRepository.getOne(id));
+        return productMapper.convertToDto(productRepository.getOne(id));
     }
 
     public ProductDTO save(ProductDTO productDTO) {
         Optional<Shop> findShop = Optional.ofNullable(shopRepository.getShopByName(productDTO.getShopName()));
-        if (!findShop.isPresent()) {
+        if (findShop.isEmpty()) {
             ShopDTO shopDTO = shopService.save(new ShopDTO(productDTO.getShopName()));
             productDTO.setShop(shopDTO);
         } else {
-            productDTO.setShop(shopTransformer.convertToDTO(findShop.get()));
+            productDTO.setShop(shopMapper.convertToDTO(findShop.get()));
         }
-        Product product = productTransformer.convertFromDto(productDTO);
+        Product product = productMapper.convertFromDto(productDTO);
         product.setCreateDate(new Timestamp(new Date().getTime()));
-        log.info("Save product : " + productDTO.toString());
-        return productTransformer.convertToDto(productRepository.save(product));
+        log.info("Save product : " + productDTO);
+        return productMapper.convertToDto(productRepository.save(product));
     }
 
 
